--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>fr.ul.miage.genielogiciel</groupId>
     <artifactId>parking</artifactId>
-    <version>1.0</version>
+    <version>2.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -23,6 +23,7 @@
 
     <build>
         <plugins>
+            <!-- appassembler-maven-plugin -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
@@ -45,6 +46,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- maven-assembly-plugin -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.1.0</version>
@@ -64,6 +66,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- build-helper-maven-plugin -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
@@ -83,6 +86,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- maven-jar-plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -95,6 +99,7 @@
                     </archive>
                 </configuration>
             </plugin>
+            <!--maven-javadoc-plugin-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -103,6 +108,7 @@
                     <reportOutputDirectory>${project.basedir}/javadoc</reportOutputDirectory>
                 </configuration>
             </plugin>
+            <!-- jacoco maven plugin -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -144,6 +150,17 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- maven-surefire-plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <excludes>
+                        <exclude/>
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -160,15 +177,15 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+        <!--  Tests unitaires en Java  -->
         <dependency>
-            <!--  Tests unitaires en Java  -->
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <!--  Mocking en Java  -->
         <dependency>
-            <!--  Mocking en Java  -->
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>${mockito.version}</version>
