[FIX] Exclude mysqlconnectiontest for the build as they need a working mysql server

--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,9 @@
                 <version>3.2.5</version>
                 <configuration>
                     <excludes>
-                        <exclude/>
+                        <excludes>
+                            mysqlconnection/*
+                        </excludes>
                     </excludes>
                 </configuration>
             </plugin>
